--- a/variants/7.4.32-fpm-alpine3.16-opcache-mysqli-gd-pdo-memcached-sockets-xdebug/Dockerfile
+++ b/variants/7.4.32-fpm-alpine3.16-opcache-mysqli-gd-pdo-memcached-sockets-xdebug/Dockerfile
@@ -10,13 +10,14 @@ RUN set -eux; \
 
 # gd
 RUN set -eux; \
-    apk add --no-cache freetype libpng libjpeg-turbo freetype-dev libpng-dev libjpeg-turbo-dev; \
+    apk add --no-cache freetype libjpeg-turbo libpng; \
+    apk add --no-cache --virtual .deps freetype-dev libjpeg-turbo-dev libpng-dev; \
     docker-php-ext-configure gd \
         --with-freetype=/usr/include/ \
         --with-jpeg=/usr/include/; \
-    docker-php-ext-install -j$(nproc) gd; \
-    apk del freetype-dev libpng-dev libjpeg-turbo-dev; \
-    docker-php-source delete
+    docker-php-ext-install gd; \
+    docker-php-source delete; \
+    apk del .deps
 
 # PDO: mysql driver
 RUN set -eux; \
@@ -26,21 +27,21 @@ RUN set -eux; \
 # See: https://github.com/docker-library/php/issues/221
 RUN set -eux; \
     apk add --no-cache postgresql-libs; \
-    apk add --no-cache --virtual .pgsql-build-dependencies postgresql-dev; \
-    docker-php-ext-install pdo pdo_pgsql; \
-    apk del .pgsql-build-dependencies postgresql-dev
+    apk add --no-cache --virtual .deps postgresql-dev; \
+    docker-php-ext-install pdo_pgsql; \
+    apk del .deps
 
 # memcached
 # See: https://stackoverflow.com/questions/40894385/how-can-i-install-the-php-memcached-extension-on-dockers-php7-alpine-image
 RUN set -eux; \
     apk add --no-cache libmemcached-libs zlib; \
     apk add --no-cache --virtual .phpize-deps $PHPIZE_DEPS; \
-    apk add --no-cache --virtual .memcached-deps zlib-dev libmemcached-dev cyrus-sasl-dev; \
+    apk add --no-cache --virtual .deps zlib-dev libmemcached-dev cyrus-sasl-dev; \
     pecl install memcached; \
     echo "extension=memcached.so" > /usr/local/etc/php/conf.d/20_memcached.ini; \
     docker-php-source delete; \
-    apk del .memcached-deps .phpize-deps; \
-    df -h
+    apk del .deps; \
+    apk del .phpize-deps;
 
 # Sockets
 # See: https://github.com/docker-library/php/issues/181#issuecomment-173365852
