--- a/.github/workflows/ci-master-pr.yml
+++ b/.github/workflows/ci-master-pr.yml
@@ -32,6 +32,247 @@ jobs:
       run: |
         git diff --exit-code
 
+  build-8-2-4-fpm-alpine3-17-opcache-mysqli-gd-pdo-memcached-sockets:
+    runs-on: ubuntu-latest
+    env:
+      VARIANT: 8.2.4-fpm-alpine3.17-opcache-mysqli-gd-pdo-memcached-sockets
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    - name: Display system info (linux)
+      run: |
+        set -e
+        hostname
+        whoami
+        cat /etc/*release
+        lscpu
+        free
+        df -h
+        pwd
+        docker info
+        docker version
+
+    # See: https://github.com/docker/build-push-action/blob/v2.6.1/docs/advanced/cache.md#github-cache
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+
+    - name: Set up Docker Buildx
+      id: buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: Cache Docker layers
+      uses: actions/cache@v3
+      with:
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-buildx-${{ env.VARIANT }}-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-buildx-${{ env.VARIANT }}-
+          ${{ runner.os }}-buildx-
+
+    # This step generates the docker tags
+    - name: Prepare
+      id: prep
+      run: |
+        set -e
+
+        # Get ref, i.e. <branch_name> from refs/heads/<branch_name>, or <tag-name> from refs/tags/<tag_name>. E.g. 'master' or 'v0.0.0'
+        REF=$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )
+
+        # Get short commit hash E.g. 'abc0123'
+        SHA=$( echo "${GITHUB_SHA}" | cut -c1-7 )
+
+        # Generate docker image tags
+        # E.g. 'v0.0.0-<variant>' and 'v0.0.0-abc0123-<variant>'
+        # E.g. 'master-<variant>' and 'master-abc0123-<variant>'
+        REF_VARIANT="${REF}-${VARIANT}"
+        REF_SHA_VARIANT="${REF}-${SHA}-${VARIANT}"
+
+        # Pass variables to next step
+        echo "VARIANT_BUILD_DIR=$VARIANT_BUILD_DIR" >> $GITHUB_ENV
+        echo "VARIANT=$VARIANT" >> $GITHUB_ENV
+        echo "REF_VARIANT=$REF_VARIANT" >> $GITHUB_ENV
+        echo "REF_SHA_VARIANT=$REF_SHA_VARIANT" >> $GITHUB_ENV
+
+    - name: Login to Docker Hub registry
+      # Run on master and tags
+      if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/')
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_REGISTRY_USER }}
+        password: ${{ secrets.DOCKERHUB_REGISTRY_PASSWORD }}
+
+    - name: Build (PRs)
+      # Run only on pull requests
+      if: github.event_name == 'pull_request'
+      uses: docker/build-push-action@v3
+      with:
+        context: variants/8.2.4-fpm-alpine3.17-opcache-mysqli-gd-pdo-memcached-sockets
+        platforms: 
+        push: false
+        tags: |
+          ${{ github.repository }}:${{ env.REF_VARIANT }}
+          ${{ github.repository }}:${{ env.REF_SHA_VARIANT }}
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+
+    - name: Build and push (master)
+      # Run only on master
+      if: github.ref == 'refs/heads/master'
+      uses: docker/build-push-action@v3
+      with:
+        context: variants/8.2.4-fpm-alpine3.17-opcache-mysqli-gd-pdo-memcached-sockets
+        platforms: 
+        push: true
+        tags: |
+          ${{ github.repository }}:${{ env.REF_VARIANT }}
+          ${{ github.repository }}:${{ env.REF_SHA_VARIANT }}
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+
+    - name: Build and push (release)
+      if: startsWith(github.ref, 'refs/tags/')
+      uses: docker/build-push-action@v3
+      with:
+        context: variants/8.2.4-fpm-alpine3.17-opcache-mysqli-gd-pdo-memcached-sockets
+        platforms: 
+        push: true
+        tags: |
+          ${{ github.repository }}:${{ env.VARIANT }}
+          ${{ github.repository }}:${{ env.REF_VARIANT }}
+          ${{ github.repository }}:${{ env.REF_SHA_VARIANT }}
+          ${{ github.repository }}:latest
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+
+    # Temp fix
+    # https://github.com/docker/build-push-action/issues/252
+    # https://github.com/moby/buildkit/issues/1896
+    - name: Move cache
+      run: |
+        rm -rf /tmp/.buildx-cache
+        mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+
+  build-8-2-4-fpm-alpine3-17-opcache-mysqli-gd-pdo-memcached-sockets-xdebug:
+    runs-on: ubuntu-latest
+    env:
+      VARIANT: 8.2.4-fpm-alpine3.17-opcache-mysqli-gd-pdo-memcached-sockets-xdebug
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    - name: Display system info (linux)
+      run: |
+        set -e
+        hostname
+        whoami
+        cat /etc/*release
+        lscpu
+        free
+        df -h
+        pwd
+        docker info
+        docker version
+
+    # See: https://github.com/docker/build-push-action/blob/v2.6.1/docs/advanced/cache.md#github-cache
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+
+    - name: Set up Docker Buildx
+      id: buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: Cache Docker layers
+      uses: actions/cache@v3
+      with:
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-buildx-${{ env.VARIANT }}-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-buildx-${{ env.VARIANT }}-
+          ${{ runner.os }}-buildx-
+
+    # This step generates the docker tags
+    - name: Prepare
+      id: prep
+      run: |
+        set -e
+
+        # Get ref, i.e. <branch_name> from refs/heads/<branch_name>, or <tag-name> from refs/tags/<tag_name>. E.g. 'master' or 'v0.0.0'
+        REF=$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )
+
+        # Get short commit hash E.g. 'abc0123'
+        SHA=$( echo "${GITHUB_SHA}" | cut -c1-7 )
+
+        # Generate docker image tags
+        # E.g. 'v0.0.0-<variant>' and 'v0.0.0-abc0123-<variant>'
+        # E.g. 'master-<variant>' and 'master-abc0123-<variant>'
+        REF_VARIANT="${REF}-${VARIANT}"
+        REF_SHA_VARIANT="${REF}-${SHA}-${VARIANT}"
+
+        # Pass variables to next step
+        echo "VARIANT_BUILD_DIR=$VARIANT_BUILD_DIR" >> $GITHUB_ENV
+        echo "VARIANT=$VARIANT" >> $GITHUB_ENV
+        echo "REF_VARIANT=$REF_VARIANT" >> $GITHUB_ENV
+        echo "REF_SHA_VARIANT=$REF_SHA_VARIANT" >> $GITHUB_ENV
+
+    - name: Login to Docker Hub registry
+      # Run on master and tags
+      if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/')
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_REGISTRY_USER }}
+        password: ${{ secrets.DOCKERHUB_REGISTRY_PASSWORD }}
+
+    - name: Build (PRs)
+      # Run only on pull requests
+      if: github.event_name == 'pull_request'
+      uses: docker/build-push-action@v3
+      with:
+        context: variants/8.2.4-fpm-alpine3.17-opcache-mysqli-gd-pdo-memcached-sockets-xdebug
+        platforms: 
+        push: false
+        tags: |
+          ${{ github.repository }}:${{ env.REF_VARIANT }}
+          ${{ github.repository }}:${{ env.REF_SHA_VARIANT }}
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+
+    - name: Build and push (master)
+      # Run only on master
+      if: github.ref == 'refs/heads/master'
+      uses: docker/build-push-action@v3
+      with:
+        context: variants/8.2.4-fpm-alpine3.17-opcache-mysqli-gd-pdo-memcached-sockets-xdebug
+        platforms: 
+        push: true
+        tags: |
+          ${{ github.repository }}:${{ env.REF_VARIANT }}
+          ${{ github.repository }}:${{ env.REF_SHA_VARIANT }}
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+
+    - name: Build and push (release)
+      if: startsWith(github.ref, 'refs/tags/')
+      uses: docker/build-push-action@v3
+      with:
+        context: variants/8.2.4-fpm-alpine3.17-opcache-mysqli-gd-pdo-memcached-sockets-xdebug
+        platforms: 
+        push: true
+        tags: |
+          ${{ github.repository }}:${{ env.VARIANT }}
+          ${{ github.repository }}:${{ env.REF_VARIANT }}
+          ${{ github.repository }}:${{ env.REF_SHA_VARIANT }}
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+
+    # Temp fix
+    # https://github.com/docker/build-push-action/issues/252
+    # https://github.com/moby/buildkit/issues/1896
+    - name: Move cache
+      run: |
+        rm -rf /tmp/.buildx-cache
+        mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+
   build-8-1-17-fpm-alpine3-17-opcache-mysqli-gd-pdo-memcached-sockets:
     runs-on: ubuntu-latest
     env:
@@ -141,7 +382,6 @@ jobs:
           ${{ github.repository }}:${{ env.VARIANT }}
           ${{ github.repository }}:${{ env.REF_VARIANT }}
           ${{ github.repository }}:${{ env.REF_SHA_VARIANT }}
-          ${{ github.repository }}:latest
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
 
@@ -1234,7 +1474,7 @@ jobs:
         mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
   update-draft-release:
-    needs: [build-8-1-17-fpm-alpine3-17-opcache-mysqli-gd-pdo-memcached-sockets, build-8-1-17-fpm-alpine3-17-opcache-mysqli-gd-pdo-memcached-sockets-xdebug, build-8-0-28-fpm-alpine3-16-opcache-mysqli-gd-pdo-memcached-sockets, build-8-0-28-fpm-alpine3-16-opcache-mysqli-gd-pdo-memcached-sockets-xdebug, build-7-4-33-fpm-alpine3-16-opcache-mysqli-gd-pdo-memcached-sockets, build-7-4-33-fpm-alpine3-16-opcache-mysqli-gd-pdo-memcached-sockets-xdebug, build-7-3-33-fpm-alpine3-15-opcache-mysqli-gd-pdo-memcached-sockets, build-7-3-33-fpm-alpine3-15-opcache-mysqli-gd-pdo-memcached-sockets-xdebug, build-7-2-34-fpm-alpine3-12-opcache-mysqli-gd-pdo-memcached-sockets, build-7-2-34-fpm-alpine3-12-opcache-mysqli-gd-pdo-memcached-sockets-xdebug]
+    needs: [build-8-2-4-fpm-alpine3-17-opcache-mysqli-gd-pdo-memcached-sockets, build-8-2-4-fpm-alpine3-17-opcache-mysqli-gd-pdo-memcached-sockets-xdebug, build-8-1-17-fpm-alpine3-17-opcache-mysqli-gd-pdo-memcached-sockets, build-8-1-17-fpm-alpine3-17-opcache-mysqli-gd-pdo-memcached-sockets-xdebug, build-8-0-28-fpm-alpine3-16-opcache-mysqli-gd-pdo-memcached-sockets, build-8-0-28-fpm-alpine3-16-opcache-mysqli-gd-pdo-memcached-sockets-xdebug, build-7-4-33-fpm-alpine3-16-opcache-mysqli-gd-pdo-memcached-sockets, build-7-4-33-fpm-alpine3-16-opcache-mysqli-gd-pdo-memcached-sockets-xdebug, build-7-3-33-fpm-alpine3-15-opcache-mysqli-gd-pdo-memcached-sockets, build-7-3-33-fpm-alpine3-15-opcache-mysqli-gd-pdo-memcached-sockets-xdebug, build-7-2-34-fpm-alpine3-12-opcache-mysqli-gd-pdo-memcached-sockets, build-7-2-34-fpm-alpine3-12-opcache-mysqli-gd-pdo-memcached-sockets-xdebug]
     if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
@@ -1247,7 +1487,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   publish-draft-release:
-    needs: [build-8-1-17-fpm-alpine3-17-opcache-mysqli-gd-pdo-memcached-sockets, build-8-1-17-fpm-alpine3-17-opcache-mysqli-gd-pdo-memcached-sockets-xdebug, build-8-0-28-fpm-alpine3-16-opcache-mysqli-gd-pdo-memcached-sockets, build-8-0-28-fpm-alpine3-16-opcache-mysqli-gd-pdo-memcached-sockets-xdebug, build-7-4-33-fpm-alpine3-16-opcache-mysqli-gd-pdo-memcached-sockets, build-7-4-33-fpm-alpine3-16-opcache-mysqli-gd-pdo-memcached-sockets-xdebug, build-7-3-33-fpm-alpine3-15-opcache-mysqli-gd-pdo-memcached-sockets, build-7-3-33-fpm-alpine3-15-opcache-mysqli-gd-pdo-memcached-sockets-xdebug, build-7-2-34-fpm-alpine3-12-opcache-mysqli-gd-pdo-memcached-sockets, build-7-2-34-fpm-alpine3-12-opcache-mysqli-gd-pdo-memcached-sockets-xdebug]
+    needs: [build-8-2-4-fpm-alpine3-17-opcache-mysqli-gd-pdo-memcached-sockets, build-8-2-4-fpm-alpine3-17-opcache-mysqli-gd-pdo-memcached-sockets-xdebug, build-8-1-17-fpm-alpine3-17-opcache-mysqli-gd-pdo-memcached-sockets, build-8-1-17-fpm-alpine3-17-opcache-mysqli-gd-pdo-memcached-sockets-xdebug, build-8-0-28-fpm-alpine3-16-opcache-mysqli-gd-pdo-memcached-sockets, build-8-0-28-fpm-alpine3-16-opcache-mysqli-gd-pdo-memcached-sockets-xdebug, build-7-4-33-fpm-alpine3-16-opcache-mysqli-gd-pdo-memcached-sockets, build-7-4-33-fpm-alpine3-16-opcache-mysqli-gd-pdo-memcached-sockets-xdebug, build-7-3-33-fpm-alpine3-15-opcache-mysqli-gd-pdo-memcached-sockets, build-7-3-33-fpm-alpine3-15-opcache-mysqli-gd-pdo-memcached-sockets-xdebug, build-7-2-34-fpm-alpine3-12-opcache-mysqli-gd-pdo-memcached-sockets, build-7-2-34-fpm-alpine3-12-opcache-mysqli-gd-pdo-memcached-sockets-xdebug]
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     steps:
@@ -1262,7 +1502,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   update-dockerhub-description:
-    needs: [build-8-1-17-fpm-alpine3-17-opcache-mysqli-gd-pdo-memcached-sockets, build-8-1-17-fpm-alpine3-17-opcache-mysqli-gd-pdo-memcached-sockets-xdebug, build-8-0-28-fpm-alpine3-16-opcache-mysqli-gd-pdo-memcached-sockets, build-8-0-28-fpm-alpine3-16-opcache-mysqli-gd-pdo-memcached-sockets-xdebug, build-7-4-33-fpm-alpine3-16-opcache-mysqli-gd-pdo-memcached-sockets, build-7-4-33-fpm-alpine3-16-opcache-mysqli-gd-pdo-memcached-sockets-xdebug, build-7-3-33-fpm-alpine3-15-opcache-mysqli-gd-pdo-memcached-sockets, build-7-3-33-fpm-alpine3-15-opcache-mysqli-gd-pdo-memcached-sockets-xdebug, build-7-2-34-fpm-alpine3-12-opcache-mysqli-gd-pdo-memcached-sockets, build-7-2-34-fpm-alpine3-12-opcache-mysqli-gd-pdo-memcached-sockets-xdebug]
+    needs: [build-8-2-4-fpm-alpine3-17-opcache-mysqli-gd-pdo-memcached-sockets, build-8-2-4-fpm-alpine3-17-opcache-mysqli-gd-pdo-memcached-sockets-xdebug, build-8-1-17-fpm-alpine3-17-opcache-mysqli-gd-pdo-memcached-sockets, build-8-1-17-fpm-alpine3-17-opcache-mysqli-gd-pdo-memcached-sockets-xdebug, build-8-0-28-fpm-alpine3-16-opcache-mysqli-gd-pdo-memcached-sockets, build-8-0-28-fpm-alpine3-16-opcache-mysqli-gd-pdo-memcached-sockets-xdebug, build-7-4-33-fpm-alpine3-16-opcache-mysqli-gd-pdo-memcached-sockets, build-7-4-33-fpm-alpine3-16-opcache-mysqli-gd-pdo-memcached-sockets-xdebug, build-7-3-33-fpm-alpine3-15-opcache-mysqli-gd-pdo-memcached-sockets, build-7-3-33-fpm-alpine3-15-opcache-mysqli-gd-pdo-memcached-sockets-xdebug, build-7-2-34-fpm-alpine3-12-opcache-mysqli-gd-pdo-memcached-sockets, build-7-2-34-fpm-alpine3-12-opcache-mysqli-gd-pdo-memcached-sockets-xdebug]
     if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
